--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -595,7 +595,7 @@ section {
 --------------------------------------------------------------*/
 .breadcrumbs {
   padding: 15px 0;
-  background-color: #e9e9e9;
+  background-color: #101010;
   min-height: 40px;
 }
 
@@ -615,13 +615,13 @@ section {
 
 .breadcrumbs ol li+li {
   padding-left: 10px;
-  color:#000000;
+  color:#ffffff;
 }
 
 .breadcrumbs ol li+li::before {
   display: inline-block;
   padding-right: 10px;
-  color: #000000;
+  color: #ffffff;
   content: "/";
 }
 
